# rockchip_npu

./: README.md  readme.md  test.md
models/rk1109/: face.json  person.json  readme.txt
models/rk3588/: hat.json  nomask.json  set_env.sh
rk1126SDK/: telpo_algsdk.h
rk3588models/telpo_algsdk_model/: car.json  head.json  person.json
telpo_AlgSDK3/: CMakeLists.txt
telpo_AlgSDK3/include/: telpo_applications.h
telpo_AlgSDK3/src/: telpo_algsdk.cpp  telpo_applications.cpp
telpo_AlgSDK_rk1109/: CMakeLists.txt  demo_test_image.cpp  tmp.out
telpo_AlgSDK_rk1109/include/: telpo_algsdk.h
telpo_AlgSDK_rk1109/src/: telpo_algsdk.cpp  telpo_applications.cpp
telpo_AlgSDK_rk1109_intelif/: CMakeLists.txt  a.out  test.cpp
telpo_AlgSDK_rk1109_intelif/include/: telpo_applications.h
telpo_AlgSDK_rk1109_intelif/lib/: libtelpoalgsdk.so.1.0
telpo_AlgSDK_rk1126/: CMakeLists.txt  demo_test_image.cpp  test_json.cpp
telpo_AlgSDK_rk1126/include/: telpo_algsdk.h  telpo_applications.h
telpo_AlgSDK_rk1126/src/: telpo_algsdk.cpp  telpo_applications.cpp
telpo_AlgSDK_rk35xx/: demo_test_image.cpp  demo_test_rtsp.cpp
telpo_AlgSDK_rk35xx/include/: telpo_algsdk.h
yolov5_v6.1/: =1.9.0  detect_hat.py  detect_mask.py  detect_sunyc.py  export_sunyc.py  log.train  requirements.txt  sunyc_check_anchors.py  train_sunyc.py
yolov5_v6.1/data/: hat.yaml  widerFace.yaml
yolov5_v6.1/models/: common.py  yolo.py
yolov5_v6.1/utils/: general.py
